Change currentMode from 'daily' to 'random'

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         const appContainer = document.getElementById('app');
 
         // 状态管理
-        let currentMode = 'daily'; // 'daily' or 'random'
+        let currentMode = 'random'; // 'daily' or 'random'
         const WORDS_PER_PAGE = 3;  //每次显示3个单词
 
         function getWordsForMode() {
